--- a/ecomsite/perfumeshop/templates/perfumeshop/detail.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/detail.html
@@ -25,19 +25,19 @@
     <tbody>
         <tr>
             <td>Top notes</td>
-            <td>Mint, Italian Lemon, Green Apple</td>
+            <td>{{ details.top_notes }}</td>
         </tr>
         <tr>
             <td>Middle notes</td>
-            <td>Tonka Beans, Geranium, Ambroxan</td>
+            <td>{{ details.middle_notes }}</td>
         </tr>
         <tr>
             <td>Base notes</td>
-            <td>Vanilla, Vetiver, Cedar, Oakmoss</td>
+            <td>{{ details.base_notes }}</td>
         </tr>
         <tr>
             <td>Fragrance category</td>
-            <td>aromatic</td>
+            <td>{{ details.fragrance_category }}</td>
         </tr>
 
     </tbody>
